--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-gesture-handler": "^2.14.1",
@@ -34,6 +35,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
