--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
