--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-smooth-pincode-input": "^1.0.9",
+    "react-pin-input": "^1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.73.20",
@@ -33,6 +35,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
